--- a/source/index.html
+++ b/source/index.html
@@ -78,7 +78,7 @@
 
 <body>
 
-	<h2>Log-in</h2>
+	<h2>Login</h2>
 	<!--Step 1 : Adding HTML-->
 	<form action="/action_page.php">
 		<div class="imgcontainer">
